chore: Added a main component and behaviors to change classes and content
AppComponent contains 4 boolean variables for the 4 pages (illustration, design, about, webdev) that will change on click events
App HTML has property binding to the <app-nav> and <app-main> tags
This binding will track changes to the 4 boolean variables
Inside <app-nav> and <app-main> class changes for nav links and content changes for main content (which are the four pages <app-illustration>, <app-design>, <app-about>, and <app-webdev>) will occur when the boolean values change to true
NavComponent contains an EventEmitter to handle those changes to booleans by sending a page string to AppComponent
Appcomponent reads page string and changes boolean values in switch statement

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,10 @@
-<p>
-  nav works!
-</p>
+<nav>
+  <a  id="nav-illustration" [ngClass]="iState ? 'comic-open' : 'comic-closed'"
+      (click)="onOpenPage('illustration')">Illustration</a>
+  <a  id="nav-design" [ngClass]="dState ? 'comic-open' : 'comic-closed'"
+      (click)="onOpenPage('design')">Design</a>
+  <a  id="nav-webdev" [ngClass]="wState ? 'comic-open' : 'comic-closed'"
+      (click)="onOpenPage('webdev')">WebDev</a>
+  <a  id="nav-about" [ngClass]="aState ? 'comic-open' : 'comic-closed'"
+      (click)="onOpenPage('about')">About</a>
+</nav>
