--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,7 +1,7 @@
 /*====================== Nav and Link classes, Animations, and Transitions ======================*/
 
 /* ~~variables ~~ */
-$bg-color: #4a4c5e;
+$bg-color: #26293a;
 $menu-open-color: white;
 $menu-close-color: black;
 
@@ -83,8 +83,8 @@ nav{
 .nav-closed{
   opacity: 0;
   border-radius: 50%;
-  width: 3em;
-  height: 3em;
+  width: 3rem;
+  height: 3rem;
   top: .5em;
   right: 5em;
   pointer-events: none;
@@ -109,7 +109,7 @@ nav>a.comic-closed{ @include vendor-prefix('transition','height .3s linear .3s, 
 }
 
 .comic-closed:nth-child(1){ /* #nav-webdev style */
-  clip-path: polygon(0% 0%, 96% 0%, 96% 90%, 0% 85%);
+  clip-path: polygon(3% 3%, 96% 3%, 96% 90%, 3% 85%);
   width: 60%;
   height: 60%;
   z-index: 4;
@@ -121,7 +121,7 @@ nav>a.comic-closed{ @include vendor-prefix('transition','height .3s linear .3s, 
 }
 
 .comic-closed:nth-child(2){ /* #nav-design style */
-  clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 0% 90%);
+  clip-path: polygon(0% 3%, 96% 3%, 96% 94%, 0% 90%);
   width: 40%;
   height: 60%;
   z-index: 3;
@@ -133,7 +133,7 @@ nav>a.comic-closed{ @include vendor-prefix('transition','height .3s linear .3s, 
 }
 
 .comic-closed:nth-child(3){ /* #nav-about style */
-  clip-path: polygon(0% 1%, 100% 5%, 100% 100%, 0% 100%);
+  clip-path: polygon(5.5% 1%, 100% 5%, 100% 97%, 5.5% 97%);
   width: 35%;
   height: 46%;
   z-index: 2;
@@ -145,7 +145,7 @@ nav>a.comic-closed{ @include vendor-prefix('transition','height .3s linear .3s, 
 }
 
 .comic-closed:nth-child(4){ /* #nav-illustration style */
-  clip-path: polygon(5% 3%, 100% 10%, 100% 100%, 5% 100%);
+  clip-path: polygon(5% 3%, 97.5% 10%, 97.5% 97%, 5% 97%);
   width: 65%;
   height: 45%;
   z-index: 1;
@@ -156,4 +156,28 @@ nav>a.comic-closed{ @include vendor-prefix('transition','height .3s linear .3s, 
   width: 100%;
   height: 100%;
   z-index: 999;
+}
+
+@media screen and (max-width: 668px){
+  nav{
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+  #nav-webdev{ top: 0; }
+  #nav-design{ top: 25%; }
+  #nav-about{ bottom: 25%; }
+  #nav-illustration{ bottom: 0; }
+
+  .comic-closed:nth-child(1), .comic-closed:nth-child(2), .comic-closed:nth-child(3), .comic-closed:nth-child(4){
+    width: 100%;
+    height: 25%;
+    z-index: 4;
+    @include vendor-prefix('transition','height .3s linear, width .3s linear, clip-path .3s ease-in-out, top .3s linear, bottom .3s linear');
+  }
+
+  .comic-closed:nth-child(1){ clip-path: polygon(3% 7%, 96% 7%, 96% 93%, 3% 85%); }
+  .comic-closed:nth-child(2),
+  .comic-closed:nth-child(3){ clip-path: polygon(3% 0%, 96% 7%, 96% 93%, 3% 85%); }
+  .comic-closed:nth-child(4){ clip-path: polygon(3% 0%, 96% 7%, 96% 90%, 3% 90%); }
 }
