--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -33,6 +33,7 @@ $menu-close-color: black;
   position: absolute;
   width: 100%;
   height: 4px;
+  left: 0px;
   border-radius: 6px;
   opacity: 1;
   @include vendor-prefix('transform', 'rotate(0deg)');
