--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -1,3 +1,94 @@
-<p>
-  design works!
-</p>
+<article [@preview-container]="banners.length+logos.length+icons.length+layouts.length">
+    <h3>Logos</h3>
+    <section id="sic-d-logos" class="collection-container">
+        <div class  = "preview-container"
+            *ngFor  = "let logo of logos"
+            (click) = "onLightBox(logo.name)">
+            <figure class = "preview-image">
+              <img  alt   = "{{logo.alt}}"
+                    id    = "{{logo.name}}"
+                    srcset="{{imagePath}}{{logo.name}}-200{{logo.fileType}} 400w,
+                            {{imagePath}}{{logo.name}}-400{{logo.fileType}} 600w,
+                            {{imagePath}}{{logo.name}}-600{{logo.fileType}} 800w,
+                            {{imagePath}}{{logo.name}}-800{{logo.fileType}} 1000w,
+                            {{imagePath}}{{logo.name}}-1100{{logo.fileType}}"
+                    sizes="(max-width: 300px) 200px,
+                          (max-width: 400px) 400px,
+                          (max-width: 600px) 600px,
+                          (max-width: 800px) 800px,
+                          1100px"
+                    src="{{imagePath}}{{logo.name}}-1100{{logo.fileType}}"
+                    data-name="{{logo.show}}">
+                </figure>
+        </div>
+      </section>
+      <h3>Banners</h3>
+      <section id="sic-d-banners" class="collection-container">
+        <div class  = "preview-container"
+            *ngFor  = "let banner of banners"
+            (click) = "onLightBox(banner.name)">
+            <figure class = "preview-image">
+              <img  alt   = "{{banner.alt}}"
+                    id    = "{{banner.name}}"
+                    srcset="{{imagePath}}{{banner.name}}-200{{banner.fileType}} 400w,
+                            {{imagePath}}{{banner.name}}-400{{banner.fileType}} 600w,
+                            {{imagePath}}{{banner.name}}-600{{banner.fileType}} 800w,
+                            {{imagePath}}{{banner.name}}-800{{banner.fileType}} 1000w,
+                            {{imagePath}}{{banner.name}}-1100{{banner.fileType}}"
+                    sizes="(max-width: 300px) 200px,
+                          (max-width: 400px) 400px,
+                          (max-width: 600px) 600px,
+                          (max-width: 800px) 800px,
+                          1100px"
+                    src="{{imagePath}}{{banner.name}}-1100{{banner.fileType}}"
+                    data-name="{{banner.show}}">
+                </figure>
+        </div>
+      </section>
+      <h3>Icons</h3>
+      <section id="sic-d-icons" class="collection-container">
+          <div class  = "preview-container"
+              *ngFor  = "let icon of icons"
+              (click) = "onLightBox(icon.name)">
+              <figure class="preview-image">
+                <img  alt="{{icon.alt}}"
+                      id="{{icon.name}}"
+                      srcset="{{imagePath}}{{icon.name}}-200{{icon.fileType}} 400w,
+                              {{imagePath}}{{icon.name}}-400{{icon.fileType}} 600w,
+                              {{imagePath}}{{icon.name}}-600{{icon.fileType}} 800w,
+                              {{imagePath}}{{icon.name}}-800{{icon.fileType}} 1000w,
+                              {{imagePath}}{{icon.name}}-1100{{icon.fileType}}"
+                      sizes="(max-width: 300px) 200px,
+                            (max-width: 400px) 400px,
+                            (max-width: 600px) 600px,
+                            (max-width: 800px) 800px,
+                            1100px"
+                      src="{{imagePath}}{{icon.name}}-1100{{icon.fileType}}"
+                      data-name="{{icon.show}}">
+                  </figure>
+          </div>
+        </section>
+        <h3>Layouts</h3>
+        <section id="sic-d-characters" class="collection-container">
+            <div class  = "preview-container"
+                *ngFor  = "let layout of layouts"
+                (click) = "onLightBox(layout.name)">
+                <figure class = "preview-image">
+                  <img  alt   = "{{layout.alt}}"
+                        id    = "{{layout.name}}"
+                        srcset="{{imagePath}}{{layout.name}}-200{{layout.fileType}} 400w,
+                                {{imagePath}}{{layout.name}}-400{{layout.fileType}} 600w,
+                                {{imagePath}}{{layout.name}}-600{{layout.fileType}} 800w,
+                                {{imagePath}}{{layout.name}}-800{{layout.fileType}} 1000w,
+                                {{imagePath}}{{layout.name}}-1100{{layout.fileType}}"
+                        sizes="(max-width: 300px) 200px,
+                              (max-width: 400px) 400px,
+                              (max-width: 600px) 600px,
+                              (max-width: 800px) 800px,
+                              1100px"
+                        src="{{imagePath}}{{layout.name}}-1100{{layout.fileType}}"
+                        data-name="{{layout.show}}">
+                    </figure>
+            </div>
+          </section>
+</article>
