--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,3 +2,7 @@
 <app-design *ngIf="dState"></app-design>
 <app-about *ngIf="aState"></app-about>
 <app-webdev *ngIf="wState"></app-webdev>
+
+<app-lightbox *ngIf="lState"
+              (changeLightBox) ="onChangeLightBox($event)"
+              ></app-lightbox>
