refactor: Added lightbox module Lightbox Module relies on information from Main module and clicked on media from Design and Illustration Module EventEmitters and shared variables added to these modulese so they can communicate Design and Illustration pass object to Main module Basic ligtbox ts set up, still need to add html and further ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,5 @@
 <app-main [iState]="iState"
           [dState]="dState"
           [wState]="wState"
-          [aState]="aState"
-          (changeBoolean) ="onChangeBoolean($event)"></app-main>
+          [aState]="aState"></app-main>
 <app-footer></app-footer>
