--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,9 @@
-<app-illustration *ngIf="iState"></app-illustration>
-<app-design *ngIf="dState"></app-design>
-<app-about *ngIf="aState"></app-about>
-<app-webdev *ngIf="wState"></app-webdev>
+<app-illustration *ngIf="iState"
+                  (changeLightBox) ="onChangeLightBox($event)"></app-illustration>
+<app-design       *ngIf="dState"
+                  (changeLightBox) ="onChangeLightBox($event)"></app-design>
+<app-about        *ngIf="aState"></app-about>
+<app-webdev       *ngIf="wState"></app-webdev>
 
 <app-lightbox *ngIf="lState"
               (changeLightBox) ="onChangeLightBox($event)"
