--- a/src/app/design/design.component.scss
+++ b/src/app/design/design.component.scss
@@ -77,6 +77,7 @@ $sbsize: 90vw;
     overflow: hidden;
     margin: 1rem 0;
     cursor: pointer;
+    @include vendor-prefix('transition', 'width .25s ease-in-out, height .25s ease-in-out, position .25s ease-in-out, height .25s ease-in-out, top .25s ease-in-out, right .25s ease-in-out, display .25s ease-in-out');
     figure{
       display: block;
       overflow: hidden;
