--- a/src/app/illustration/illustration.component.scss
+++ b/src/app/illustration/illustration.component.scss
@@ -77,6 +77,7 @@ $sbsize: 90vw;
     overflow: hidden;
     margin: 1rem 0;
     cursor: pointer;
+    @include vendor-prefix('transition', 'width .25s ease-in-out, height .25s ease-in-out, position .25s ease-in-out, height .25s ease-in-out, top .25s ease-in-out, right .25s ease-in-out, display .25s ease-in-out');
     figure{
       display: block;
       overflow: hidden;
@@ -98,11 +99,12 @@ $sbsize: 90vw;
   }
   .lbopen{
     position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    right: 0;
-    padding: 2rem;
+    width: 90vw;
+    height: 90vh;
+    bottom: 5vh;
+    right: 5vw;
+    z-index: 999999;
+    background-color: #efefef;
     figure{
       img{
         object-fit: contain;
