--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,20 @@ html, body{
 }
 
 html{ overflow: hidden; }
+
+/*======================================= Styles for Scroll Bar ====================================*/
+
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 2em;
+}
+
+body::-webkit-scrollbar-track{
+  background-color: transparent;
+}
