--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ html, body{
 
 html{ overflow: hidden; }
 
-/*======================================= Styles for Scroll Bar ====================================*/
+/*==================================== Styles for Body Scroll Bar ==================================*/
 
 
 body::-webkit-scrollbar {
@@ -41,5 +41,22 @@ body::-webkit-scrollbar-thumb{
 }
 
 body::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+
+/*================================= Styles for Figcaption Scroll Bar ===============================*/
+
+
+figcaption::-webkit-scrollbar {
+  width: 10px;
+}
+
+figcaption::-webkit-scrollbar-thumb{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 2em;
+}
+
+figcaption::-webkit-scrollbar-track{
   background-color: transparent;
 }
