refactor: Copyright symbol in all small tags with date

--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -26,7 +26,7 @@
                   id = "figcaption_logo_{{i}}">
                   <h2>{{logo.title}}</h2>
                   <p>{{logo.description}}</p>
-                  <small>{{logo.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+                  <small>&copy;{{logo.date * 1000 | date: 'MM/dd/yyyy'}}</small>
               </figcaption>
       </div>
     </section>
@@ -57,7 +57,7 @@
                     id = "figcaption_banner_{{i}}">
                     <h2>{{banner.title}}</h2>
                     <p>{{banner.description}}</p>
-                    <small>{{banner.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+                    <small>&copy;{{banner.date * 1000 | date: 'MM/dd/yyyy'}}</small>
                 </figcaption>
         </div>
       </section>
@@ -88,7 +88,7 @@
                     id = "figcaption_icon_{{i}}">
                     <h2>{{icon.title}}</h2>
                     <p>{{icon.description}}</p>
-                    <small>{{icon.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+                    <small>&copy;{{icon.date * 1000 | date: 'MM/dd/yyyy'}}</small>
                 </figcaption>
         </div>
       </section>
@@ -119,7 +119,7 @@
                       id = "figcaption_layout_{{i}}">
                       <h2>{{layout.title}}</h2>
                       <p>{{layout.description}}</p>
-                      <small>{{layout.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+                      <small>&copy;{{layout.date * 1000 | date: 'MM/dd/yyyy'}}</small>
                   </figcaption>
           </div>
         </section>
